main.tf
#====================================================================
#Fetching availability Zones
#====================================================================
data "aws_availability_zones" "az" {
  state = "available"
}
#====================================================================
# Vpc Creation
#====================================================================
resource "aws_vpc" "vpc" {
  cidr_block                  = var.vpc_cidr
  instance_tenancy            = "default"
  enable_dns_support          = true
  enable_dns_hostnames        = true
  tags = {
    Name        = "vpc"
    project     = "${var.project}-vpc"
  }
  
  lifecycle {
    create_before_destroy = true
  }
}
#====================================================================
#Attaching Internet GateWay
#====================================================================
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name        = "${var.project}-igw"
    project     = var.project
  }
  
  lifecycle {
    create_before_destroy = true
  }

}
#====================================================================
# Creating Public Subnet1
#====================================================================
resource "aws_subnet" "public1" {
  vpc_id                    = aws_vpc.vpc.id
  cidr_block                = cidrsubnet(var.vpc_cidr,var.vpc_subnets,0)
  map_public_ip_on_launch   = true
  availability_zone         = data.aws_availability_zones.az.names[0]
  tags = {
    Name    = "${var.project}-public1"
    project = var.project
  }

 lifecycle {
    create_before_destroy = true
  }
  
}
#====================================================================
# Creating Public Subnet2
#====================================================================
resource "aws_subnet" "public2" {
  vpc_id                    = aws_vpc.vpc.id
  cidr_block                = cidrsubnet(var.vpc_cidr,var.vpc_subnets,1)
  map_public_ip_on_launch   = true
  availability_zone         = data.aws_availability_zones.az.names[1]
  tags = {
    Name    = "${var.project}-public2"
    project = var.project
  }

  lifecycle {
    create_before_destroy = true
 }
  
}
#====================================================================
# Creating Public Subnet3
#====================================================================
resource "aws_subnet" "public3" {
  vpc_id                    = aws_vpc.vpc.id
  cidr_block                = cidrsubnet(var.vpc_cidr,var.vpc_subnets,2)
  map_public_ip_on_launch   = true
  availability_zone         = data.aws_availability_zones.az.names[2]
  tags = {
    Name    = "${var.project}-public3"
    project = var.project
  }

  lifecycle {
    create_before_destroy = true
  }
  
}
#====================================================================
# Creating Private Subnet1
#====================================================================
resource "aws_subnet" "private1" {
  vpc_id                    = aws_vpc.vpc.id
  cidr_block                = cidrsubnet(var.vpc_cidr,var.vpc_subnets,3)
  map_public_ip_on_launch   = false
  availability_zone         = data.aws_availability_zones.az.names[0]
  tags = {
    Name    = "${var.project}-private1"
    project = var.project
  }

  lifecycle {
    create_before_destroy = true
  }
  
}
#====================================================================
# Creating Private Subnet2
#====================================================================
resource "aws_subnet" "private2" {
  vpc_id                    = aws_vpc.vpc.id
  cidr_block                = cidrsubnet(var.vpc_cidr,var.vpc_subnets,4)
  map_public_ip_on_launch   = false
  availability_zone         = data.aws_availability_zones.az.names[1]
  tags = {
    Name    = "${var.project}-private2"
    project = var.project
  }

  lifecycle {
    create_before_destroy = true
  }
  
}
#====================================================================
# Creating Private Subnet3
#====================================================================
resource "aws_subnet" "private3" {
  vpc_id                    = aws_vpc.vpc.id
  cidr_block                = cidrsubnet(var.vpc_cidr,var.vpc_subnets,5)
  map_public_ip_on_launch   = false
  availability_zone         = data.aws_availability_zones.az.names[2]
  tags = {
    Name    = "${var.project}-private3"
    project = var.project
  }

  lifecycle {
    create_before_destroy = true
  }
  
}
#====================================================================
# Creating Elastic Ip for NatGateWay
#====================================================================

resource "aws_eip" "eip" {
  vpc      = true
  tags = {
    Name = "${var.project}-eip"
    Project = var.project
  }
}
#====================================================================
#Nat GateWay Creation
#====================================================================
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.eip.id
  subnet_id     = aws_subnet.public1.id

  tags = {
    Name    = "${var.project}-nat"
    project = var.project
  }
}
#====================================================================
# Route Table Public
#====================================================================
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.vpc.id

  route{
      cidr_block = "0.0.0.0/0"
      gateway_id = aws_internet_gateway.igw.id
    }
 

  tags = {
    Name    = "${var.project}-public-rtb"
    project = var.project
  }
}
#====================================================================
# Route Table Private
#====================================================================
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.vpc.id

  route {
          cidr_block = "0.0.0.0/0"
      gateway_id = aws_nat_gateway.nat.id
    }
 
  tags = {
    Name    = "${var.project}-private-rtb"
    project = var.project
  }
}
#====================================================================
#Route Table association public route table
#====================================================================
resource "aws_route_table_association" "public1" {
  subnet_id      = aws_subnet.public1.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public2" {
  subnet_id      = aws_subnet.public2.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public3" {
  subnet_id      = aws_subnet.public3.id
  route_table_id = aws_route_table.public.id
}
#====================================================================
# Route Table association Private route table
#====================================================================
resource "aws_route_table_association" "private1" {
  subnet_id      = aws_subnet.private1.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private2" {
  subnet_id      = aws_subnet.private2.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private3" {
  subnet_id      = aws_subnet.private3.id
  route_table_id = aws_route_table.private.id
}
#====================================================================
# SecurityGroup bastion
#====================================================================
resource "aws_security_group" "bastion" {
    
  vpc_id      = aws_vpc.vpc.id
  name        = "${var.project}-bastion"
  description = "allow 22 port"

  ingress = [
    {
      description      = ""
      prefix_list_ids  = []
      security_groups  = []
      self             = false
      from_port        = 22
      to_port          = 22
      protocol         = "tcp"
      cidr_blocks      = [ "0.0.0.0/0" ]
      ipv6_cidr_blocks = [ "::/0" ]
    } 
      
  ]

  egress = [
    { 
      description      = ""
      prefix_list_ids  = []
      security_groups  = []
      self             = false
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
    }
  ]

  tags = {
    Name = "${var.project}-bastion"
    Project = var.project
  }
}
#====================================================================
# SecurityGroup webserver
#====================================================================
resource "aws_security_group" "webserver" {
    
  vpc_id      = aws_vpc.vpc.id
  name        = "${var.project}-webserver"
  description = "allow 80,443,22 port"

  ingress = [
    {
      description      = ""
      prefix_list_ids  = []
      security_groups  = []
      self             = false
      from_port        = 80
      to_port          = 80
      protocol         = "tcp"
      cidr_blocks      = [ "0.0.0.0/0" ]
      ipv6_cidr_blocks = [ "::/0" ]
    },
    {
      description      = ""
      prefix_list_ids  = []
      security_groups  = []
      self             = false
      from_port        = 443
      to_port          = 443
      protocol         = "tcp"
      cidr_blocks      = [ "0.0.0.0/0" ]
      ipv6_cidr_blocks = [ "::/0" ]
    },
    {
      description      = ""
      prefix_list_ids  = []
      security_groups  = []
      self             = false
      from_port        = 22
      to_port          = 22
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
      security_groups  = [ aws_security_group.bastion.id ]
    }
      
  ]

  egress = [
     { 
      description      = ""
      prefix_list_ids  = []
      security_groups  = []
      self             = false
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
    }
  ]

  tags = {
    Name = "${var.project}-webserver"
    Project = var.project
  }
}
#====================================================================
# SecurityGroup database
#====================================================================
resource "aws_security_group" "database" {
    
  vpc_id      = aws_vpc.vpc.id
  name        = "${var.project}-database"
  description = "allow 3306,22 port"

  ingress = [
    
    {
      description      = ""
      prefix_list_ids  = []
      security_groups  = []
      self             = false
      from_port        = 22
      to_port          = 22
      protocol         = "tcp"
      cidr_blocks      = []
      ipv6_cidr_blocks = []
      security_groups  = [ aws_security_group.bastion.id ]
    },
    {
      description      = ""
      prefix_list_ids  = []
      security_groups  = []
      self             = false
      from_port        = 3306
      to_port          = 3306
      protocol         = "tcp"
      cidr_blocks      = []
      ipv6_cidr_blocks = []
      security_groups  = [ aws_security_group.webserver.id ]
    }
      
  ]

  egress = [
     { 
      description      = ""
      prefix_list_ids  = []
      security_groups  = []
      self             = false
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
    }
  ]

  tags = {
    Name = "${var.project}-database"
    Project = var.project
  }
}
#====================================================================
# Keypair Creation
#====================================================================
resource "aws_key_pair" "key" {
  key_name   = "${var.project}-key"
  public_key = file("mykey.pub")
  tags = {
    Name = "${var.project}-sshkey"
    Project = var.project
  }
}
#====================================================================
# bastion
#====================================================================
resource "aws_instance" "bastion" {

  ami                          =  var.ami
  instance_type                =  var.type
  subnet_id                    =  aws_subnet.public2.id
  vpc_security_group_ids       =  [ aws_security_group.bastion.id]
  key_name                     =  aws_key_pair.key.id
  tags = {
    Name = "${var.project}-bastion"
    Project = var.project
  }

}
#====================================================================
#webserver
#====================================================================
resource "aws_instance" "webserver" {

  ami                          =  var.ami
  instance_type                =  var.type
  subnet_id                    =  aws_subnet.public1.id
  user_data                    =  file("web_userdata.sh")
  vpc_security_group_ids       =  [ aws_security_group.webserver.id]
  key_name                     =  aws_key_pair.key.id
  tags = {
    Name = "${var.project}-webserver"
    Project = var.project
  }
  
}

#====================================================================
# database
#====================================================================

resource "aws_instance" "database" {

  ami                          =  var.ami
  instance_type                =  var.type
  subnet_id                    =  aws_subnet.private1.id
  user_data                    =  file("db_userdata.sh")
  vpc_security_group_ids       =  [ aws_security_group.database.id]
  key_name                     =  aws_key_pair.key.id
  tags = {
    Name = "${var.project}-database"
    Project = var.project
  }
  
}
#====================================================================
